--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.5",
     "decompress-zip": "^0.3.3",
     "express": "^4.17.1",
+    "filereader": "^0.10.3",
     "multer": "^1.4.2",
     "request": "^2.88.2",
     "xml2js": "^0.4.23"
